# ci-experiments

./: .gitignore  README.md
.github/workflows/: build.yml
HelloApp/: CMakeLists.txt  main.cpp
HelloLibrary/: CMakeLists.txt  HelloLib.cpp  HelloLib.h
